# backend/gestion-evento-laravel/app/Domain/Repositories/RoleRepository.php
@@ -11,4 +11,6 @@ interface RoleRepository
     public function create(Role $user): Role;
     public function update(Role $user): Role;
     public function delete(int $id): void;
+    public function getRolesPaginated(int $perPage = 10);
+    public function searchRoles(string $term, int $perPage = 10);
 }
